--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -7,15 +7,15 @@
 
     {% csrf_token %}
     <div class="container">
-
-        <h1 class="mb-5">Basic Infomation</h1>
+        {% for cvBasic in cvBasicInfo %}
+        <h1 class="mb-5">Edit Infomation</h1>
 
         <div class="bg-white shadow rounded-lg d-block d-sm-flex">
             <div class="profile-tab-nav border-right">
                 <div class="p-4">
                     <div class="img-circle text-center mb-3">
 
-                        <img src="/static/images/user-defult.png" alt="Image" class="shadow" id="icon-preview">
+                        <img src="{{cvBasic.profileIcon}}" alt="Image" class="shadow" id="icon-preview">
 
                     </div>
                     <input type="file" id="profileIcon" accept="image/*">
@@ -24,18 +24,18 @@
 
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
-                        <i class="fa fa-home text-center mr-1"></i> Account
+                        <i class="fa fa-home text-center mr-1"></i> Information
                     </a>
 
                 </div>
             </div>
 
             <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
-                {% for cvBasic in cvBasicInfo %}
+
 
                 <div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
 
-                    <h3 class="mb-4">Basic Infomation</h3>
+                    <h3 class="mb-4">Edit Infomation</h3>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -82,10 +82,11 @@
                     </div>
 
                 </div>
-                {% endfor %}
+
 
             </div>
         </div>
+        {% endfor %}
     </div>
     </div>
 </section>
@@ -115,23 +116,9 @@
 
     function save() {
         if (base64ImgProfileIcon == '') {
-            base64ImgProfileIcon = "/static/images/user-defult.png"
+            base64ImgProfileIcon = $('#icon-preview').attr('src');
 
         }
-
-        // baseInfo = []
-
-        // baseInfo.push({
-        //     profileIcon: base64ImgProfileIcon,
-        //     fristName: $("#fristName").val(),
-        //     lastName: $("#lastName").val(),
-        //     nickName: $("#nickName").val(),
-        //     phoneNumber: $("#phoneNumber").val(),
-        //     email: $("#email").val(),
-        //     aboutMe: $("#aboutMe").val()
-        // })
-
-
 
 
         fetch("/student/cvProfile", {
@@ -148,7 +135,7 @@
         }).then(response => response.json()).then((json) => {
             Swal.fire({
                 title: 'CV Status',
-                text: json.status ? 'Save CV Successfully' : 'Fail to create CV',
+                text: json.status ? 'Save  Successfully' : 'Fail to save CV',
                 icon: json.status ? 'success' : 'error',
                 showCancelButton: true,
                 showDenyButton: false,
