--- a/server/templates/nav_student.html
+++ b/server/templates/nav_student.html
@@ -8,15 +8,13 @@
     </div>
 
     <header>
-        <a href="#" class="brand">Jacob</a>
+        <a href="#" class="brand">HKBU CV System</a>
         <div class="menu-btn"></div>
         <div class="navigation">
-            <a href="#main">Home</a>
-            <a href="#about">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#services">Services</a>
-            <a href="#work">Work</a>
-            <a href="#contact">Contact</a>
+            <a href="/student/cvRecord">CV Record</a>
+            <a href="/student/jobList">Job List</a>
+            <a href="/student/jobDetail">Job Detail</a>
+            <a href="/student/cvProfile">Profile</a>
         </div>
     </header>
 
