Update the navigation of the manager page by adding the functions to edit and delete student information, and apply a jQuery table to the student management page

--- a/server/manager/templates/manager/dashboard.html
+++ b/server/manager/templates/manager/dashboard.html
@@ -85,7 +85,7 @@ $(document).ready(()=>{
                         <h4><i class="fa-solid fa-users"></i></h4>
                       </div>
                       <h6 class="text-muted fw-normal mt-0">Students</h6>
-                      <h3 class="mt-3 mb-3">36,254</h3>
+                      <h3 class="mt-3 mb-3">{{numOfStudent}}</h3>
                   </div>
                 </div>
               </div>
@@ -97,7 +97,7 @@ $(document).ready(()=>{
                         <h4><i class="fa-solid fa-file"></i></h4>
                       </div>
                       <h6 class="text-muted fw-normal mt-0">Number of CV</h6>
-                      <h3 class="mt-3 mb-3">56,108</h3>
+                      <h3 class="mt-3 mb-3">{{numOfCv}}</h3>
                   </div>
                 </div>
               </div>
