--- a/server/manager/templates/manager/components/students_page/create_student_modal.html
+++ b/server/manager/templates/manager/components/students_page/create_student_modal.html
@@ -7,6 +7,20 @@
             </div>
             <div class="modal-body">
                 <form>
+                    <div class="mb-3 row">
+                        <div class="col-6">
+                            <label for="first_name_create_user" class="form-label">First Name</label>
+                            <input type="text" class="form-control" id="first_name_create_user" aria-describedby="firstname">
+                        </div>
+                        <div class="col-6">
+                            <label for="last_name_create_user" class="form-label">Last Name</label>
+                            <input type="text" class="form-control" id="last_name_create_user" aria-describedby="lastname">
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="phone_create_user" class="form-label">Phone Number</label>
+                        <input type="text" class="form-control" id="phone_create_user" aria-describedby="phone">
+                    </div>
                     <div class="mb-3">
                         <label for="email_create_user" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="email_create_user" aria-describedby="emailHelp">
@@ -22,6 +36,10 @@
                     <div class="mb-3">
                         <label for="password_create_user" class="form-label">Password</label>
                         <input type="text" class="form-control" id="password_create_user" aria-describedby="password">
+                    </div>
+                    <div class="mb-3">
+                        <label for="bio_create_user">Bio</label>
+                        <textarea class="form-control" id="bio_create_user" rows="3"></textarea>
                     </div>
                 </form>
             </div>
